--- a/IEproject/templates/base.html
+++ b/IEproject/templates/base.html
@@ -11,20 +11,16 @@
     <link rel="stylesheet" href="${pageContext.request.contextPath}/resources/css/font-awesome.min.css" type="text/css">
 
     <link rel="stylesheet" href="{% static 'css/_navbar.css' %}">
-    <link rel="stylesheet" href="{% static '/css/mainpage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mainpage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/search.css' %}">
+    <link rel="stylesheet" href="{% static 'css/detail.css' %}">
     <link rel="stylesheet" href="{% static '/css/root2.css' %}">
 
 </head>
 
-<form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="post">
-    {% csrf_token %}
-<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q" value="{{q}}">
-<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-</form>
-
 <body>
-    {% include 'shared/_navbar.html' %}
-    <div class="container">
+    <!-- {% include 'shared/_navbar.html' %} -->
+    <div class="container" style="width: 100vw;">
         {% block content %}
         {% endblock %}
     </div>
