--- a/main/templates/main/mainpage.html
+++ b/main/templates/main/mainpage.html
@@ -2,5 +2,37 @@
 {% load static %}
 
 {% block content %}
+<style>
+
+    
+    * {
+    /* background-color: #FF8547; */
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    /* line-height: 100%; */
+    height: 100%;
+    }
+
+.container {
+    background: url(/static/media/main2.png.jpg) no-repeat center; 
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    margin: 0;
+}
+</style>
+
+<div class=search-form>
+    <h style="font-size: 50px; width:100%; background-color: #BAC8CB;"><img src="{% static 'media/logo.png' %}" style="background-color: #BAC8CB;"></h>
+    <form class="search-box" action="{% url 'search' %}" method="post">
+        {% csrf_token %}
+        <input id="search-form-input" type="search" placeholder="건물을 입력하세요" aria-label="Search" name="q" value="{{q}}" style="background-color: #FFF;">
+        <button id="search-form-button" type="submit"><i id="search-form-button-img" class="fa-solid fa-location-dot"></i></button>
+    </form>
+</div>
+
 
 {% endblock %}
