--- a/IEproject/templates/shared/_navbar.html
+++ b/IEproject/templates/shared/_navbar.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <div class="result-nav">
     <div class="logo-img"><a href="{% url 'showmain' %}"><img src="{% static 'media/logo.png' %}" style="background-color: #BAC8CB;"></a></div>
     <form class="nav-search" action="{% url 'search' %}" method="post">
