--- a/IEproject/templates/search.html
+++ b/IEproject/templates/search.html
@@ -13,7 +13,7 @@
 <div class="search-container">
     {% if not blogs %}
 
-    <h1>검색 결과가 없습니다</h1>
+    <div style="text-align: center; font-size:40px; padding-top: 5%;">검색 결과가 없습니다</div>
 
     {% else %}
     <div class="build-img">
