--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -83,7 +83,7 @@
             {% endif %}
             {% if blog.body2 %}
             <div class="build-main-list-box" id="list-box" style="margin-top: 10%; margin-bottom: 10%;">
-                <div id="box-img"><i class="fa-solid fa-3"></i></div>
+                <div id="box-img"><i class="fa-solid fa-3" style="color: #FFF;"></i></div>
                 <div id="box-main">{{blog.body2}}</div>
             </div>
             {% endif %}
