--- a/IEproject/templates/search.html
+++ b/IEproject/templates/search.html
@@ -16,9 +16,11 @@
     <div style="text-align: center; font-size:40px; padding-top: 5%;">검색 결과가 없습니다</div>
 
     {% else %}
+    {% if blogs.1 %}
     <div class="build-img">
-        <img src="{{ blog.image.url }}">
+        <img src="{{ blogs.1.image.url }}">
     </div>
+    {% endif %}
     <div class="build-list"> 
         <div class="build-main">
             {{ q }}
